samples/_failures_safe/1761648451_48bde8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be59f82f.c: In function ‘main’:
./samples/SAFE/__tmp_be59f82f.c:157:16: error: missing terminating " character
  157 |         printf("No logs found for the specified level
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_be59f82f.c:157:9: error: expected expression at end of input
  157 |         printf("No logs found for the specified level
      |         ^~~~~~
./samples/SAFE/__tmp_be59f82f.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be59f82f.c:157:9: error: expected declaration or statement at end of input
